--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: luis@mcneel.com
 description: >- # this means to ignore newlines until "baseurl:"
   Site to report on research projects where Rhino and other McNeel products are utilized.
 baseurl: "/research" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://mcneel.github.io/research" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  mcneel
 
